# wizdantic

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.agents/: README.md  theme.md
.agents/standards/: code-style.md  git.md  markdown.md  testing.md
.github/workflows/: deploy.yml  docs.yml  main.yml
demo/: index.html
docs/: mkdocs.yaml
docs/source/: demo.md  features.md  index.md  quickstart.md  reference.md
docs/source/assets/stylesheets/: extra.css
docs/source/images/: wizdantic-logo-2.png~
examples/: README.md  advanced_example.py  basic_example.py  instance_example.py
features/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/wizdantic/: __init__.py  console.py  exceptions.py  lore.py  prompts.py  type_utils.py  wizard.py
src/wizdantic_demo/: choices.py  collections.py  helpers.py  instance_seeding.py  main.py  nested_models.py  optional_and_secret.py  scalar_types.py  wizard_lore.py
tests/integration/: conftest.py  wizard.feature
tests/integration/steps/: wizard_steps.py
tests/unit/: test_console.py  test_lore.py  test_prompts.py  test_type_utils.py  test_version.py  test_wizard.py
